search firewall by ip; rules by firewall
